# HFT-Engine

./: .gitignore  CMakeLists.txt  README.md  app.js  index.html  run.sh  styles.css
frontend/: app.js  index.html  styles.css
include/common/: timer.hpp  types.hpp
include/core/: book_validator.hpp  engine_stats.hpp  limit.hpp  matching_engine.hpp  order.hpp  order_book.hpp
include/memory/: order_pool.hpp
include/network/: market_data.hpp  protocol.hpp  tcp_server.hpp  udp_publisher.hpp
include/simulation/: market_simulator.hpp
scripts/: build.sh
src/: CMakeLists.txt
src/main/: engine_main.cpp  gateway_main.cpp
src/memory/: order_pool.cpp
src/network/: market_data_client.cpp  tcp_server.cpp  test_client.cpp  udp_publisher.cpp
src/simulation/: market_simulator.cpp
ws_bridge/: package.json  ws_bridge.js
